Fixed deprecated call in the getAvailablePaths